2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/46_or_bool_bool_aff_float.deca
// Description :
//      affécation d'une comparasion dans un float  
// Resultats :
//    Erreur Contexteulle : ligne 10 : le boolean ne peut pas être affecté à float
//
// Historique :
// cree le 10/01/2024

{
    float f  = true || false ;
}